--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>DIDIRS - Web Edition</title>
     
     <script src="pixi.4.5.5.js" type="text/javascript"></script>
-    <script src="texture-helper.js" type="text/javascript"></script>
     <script src="constants.js" type="text/javascript"></script>
+    <script src="globals.js" type="text/javascript"></script>
+    <script src="playground.js" type="text/javascript"></script>
+    <script src="texture-helper.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 
     <style>* {padding: 0; margin: 0}</style>
