--- a/index.html
+++ b/index.html
@@ -3,15 +3,36 @@
 <head>
     <meta charset="utf-8">
     <title>DIDIRS - Web Edition</title>
+
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
     
     <script src="pixi.4.5.5.js" type="text/javascript"></script>
     <script src="constants.js" type="text/javascript"></script>
+    <script src="blocks.js" type="text/javascript"></script>
     <script src="globals.js" type="text/javascript"></script>
     <script src="playground.js" type="text/javascript"></script>
     <script src="texture-helper.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 
-    <style>* {padding: 0; margin: 0}</style>
+    <style>
+        * {padding: 0; margin: 0}
+        
+        body {
+            background-color: black;
+        }
+
+        canvas {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            border: 1px solid white;
+        }
+    </style>
 </head>
 
 <body>
