--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     
     <script src="pixi.4.5.5.js" type="text/javascript"></script>
     <script src="constants.js" type="text/javascript"></script>
-    <script src="blocks.js" type="text/javascript"></script>
+    <script src="block-factory.js" type="text/javascript"></script>
+    <script src="stone-types.js" type="text/javascript"></script>
+    <script src="stone-factory.js" type="text/javascript"></script>
     <script src="globals.js" type="text/javascript"></script>
     <script src="playground.js" type="text/javascript"></script>
-    <script src="texture-helper.js" type="text/javascript"></script>
+    <script src="engine.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 
     <style>
