--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     
     <script src="pixi.4.5.5.js" type="text/javascript"></script>
+    <script src="Tone.js" type="text/javascript"></script>
     <script src="constants.js" type="text/javascript"></script>
+    <script src="audio.js" type="text/javascript"></script>
     <script src="block-factory.js" type="text/javascript"></script>
     <script src="stone-types.js" type="text/javascript"></script>
     <script src="stone-factory.js" type="text/javascript"></script>
