--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
     <script src="pixi.4.5.5.js" type="text/javascript"></script>
+    <script src="pixi-layers.js" type="text/javascript"></script>
     <script src="Tone.js" type="text/javascript"></script>
     <script src="constants.js" type="text/javascript"></script>
     <script src="audio.js" type="text/javascript"></script>
